positioning of planet images fixed on mobile device

--- a/starter-code/styles/earth.css
+++ b/starter-code/styles/earth.css
@@ -151,7 +151,7 @@ ul {
 
 .earth__images-img-three {
     top: 60%;
-    left: 37%;
+    left: 35.5%;
 }
 
 .earth__images-img-two,
