--- a/starter-code/styles/jupiter.css
+++ b/starter-code/styles/jupiter.css
@@ -165,11 +165,8 @@ ul {
 .jupiter__image-three img {
     width: 111px;
     height: 135px;
-}
-
-.jupiter__images-img-three {
-    top: 52%;
-    left: 37%;
+    top: 54%;
+    left: 35.5%;
 }
 
 /* jupiter__head styling */
