--- a/starter-code/styles/neptune.css
+++ b/starter-code/styles/neptune.css
@@ -149,6 +149,16 @@ ul {
     top: 25%;
 }
 
+.neptune__image-three img {
+    width: 111px;
+    height: 135px;
+}
+
+.neptune__images-img-three {
+    top: 52%;
+    left: 35.5%;
+}
+
 .neptune__images-img-two,
 .neptune__images-img-three {
     display: none;
@@ -160,16 +170,6 @@ ul {
 
 .neptune__images-img-three.show {
     display: block;
-}
-
-.neptune__image-three img {
-    width: 111px;
-    height: 135px;
-}
-
-.neptune__images-img-three {
-    top: 52%;
-    left: 35%;
 }
 
 /* neptune__head styling */
