--- a/starter-code/styles/saturn.css
+++ b/starter-code/styles/saturn.css
@@ -169,7 +169,7 @@ ul {
 
 .saturn__images-img-three {
     top: 62%;
-    left: 37%;
+    left: 35.5%;
 }
 
 /* saturn__head styling */
