--- a/starter-code/styles/uranus.css
+++ b/starter-code/styles/uranus.css
@@ -145,8 +145,18 @@ ul {
 .uranus__images-img-two,
 .uranus__images-img-three {
     position: absolute;
-    left: 25%;
     top: 25%;
+    left: 26%;
+}
+
+.uranus__image-three img {
+    width: 111px;
+    height: 135px;
+}
+
+.uranus__images-img-three {
+    top: 52%;
+    left: 35.5%;
 }
 
 .uranus__images-img-two,
@@ -160,16 +170,6 @@ ul {
 
 .uranus__images-img-three.show {
     display: block;
-}
-
-.uranus__image-three img {
-    width: 111px;
-    height: 135px;
-}
-
-.uranus__images-img-three {
-    top: 52%;
-    left: 34%;
 }
 
 /* uranus__head styling */
